# perch

./: Cargo.toml  README.md  perft.in
course/: maarittely.md  viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: attacks.rs  bitboard.rs  board.rs  error.rs  evals.rs  main.rs  mov.rs  piece.rs  position.rs  search.rs  uci.rs
